@@ -5,6 +5,8 @@ dbus (1.6.8-1+exp1) UNRELEASED; urgency=low
     debug build with --with-valgrind for better instrumentation
   * Apply patch from upstream to make it build with newer valgrind
   * debian/rules: factor out production and debug configure flags
+  * Add support for DEB_BUILD_OPTIONS=nodocs, which omits most documentation
+    (allowing doxygen and xmlto to be avoided)
 
  -- Simon McVittie <smcv@debian.org>  Mon, 01 Oct 2012 14:49:32 +0100
 
